# spinalcordtoolbox

./: .all-contributorsrc  .ci.sh  .conda_environment.yml  .dockerignore  .gitconfig  .gitignore  .gitignore.REMOVED.git-id  .readthedocs.yaml  .readthedocs.yml  .travis.sh  .travis.yml  CHANGES.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTING.rst  Dockerfile  LICENSE  MANIFEST.in  QC_REPORT_USER_GUILDELINES  README.md  README.rst  abstract.png.REMOVED.git-id  batch_processing.sh  batch_processing_PAM50.sh  batch_processing_hawaii17.sh  batch_processing_t1.sh  batch_processing_t2.sh  batch_single_subject.sh  bug_report.txt  cascaded-registration-requirements.txt  cascaded-registration.py  check_style.sh  codecov.yml  commit.txt  conftest.py  create_package.py  create_package_debian.py  install.txt  install_ads  install_ants.sh  (+23 more)
.devcontainer/: devcontainer-lock.json  devcontainer.json
.github/: FUNDING.yml  ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md
assets/: index.html
contrib/: fslhd.py
dev/: Batch_moco_not_fully_functionnal.m  generate_ml_data.py  modif_backup.txt  optVesselNessFilter.py  pipeline.key  pre_commit_hook.py  sct_apply_local_filter.py  sct_average_multiecho.sh  sct_correct_header_mosaic.sh  sct_dmri_moco__old.py  sct_icv.py  sct_machine_learning.py  sct_nin_convert_dcm2nii.py  sct_nurbs.py  sct_register_spine_straightened_to_template.py  sct_register_straight_spinalcord_to_template.py  sct_register_to_template__old.py  sct_scad.py  sct_schedule_TxTy.txt  sct_sdika.py  sct_sdika_3.py  sct_seg_utility.py  sct_segment_graymatter.py  sct_smooth_spinal_cord.py  sct_smooth_spinal_cord__ISABELLE.py  sct_smooth_spinal_cord_shifting_centerline.py  testing_sct_propseg.py  todo.txt
dev/isct_crop_image/: CMakeLists.txt  Matrix3x3.cpp  Matrix4x4.cpp  Mesh.cpp  Mesh.h  OrientImage.h  SpinalCord.cpp  SpinalCord.h  Vector3.cpp  Vector4.cpp  Vector4.h  Vertex.h
dev/isct_dice_coefficient/: CMakeLists.txt  main.cpp
dev/isct_propseg/: BSplineApproximation.h  CMakeLists.txt  DeformableModelBasicAdaptator.cpp  DeformableModelBasicAdaptator.h  Docu_Correction.h  GlobalAdaptation.cpp  GlobalAdaptation.h  Image3D.cpp  Image3D.h  Initialisation.cpp  Initialisation.h  Main.cpp  Mesh.cpp  Mesh.h  MeshToVTKPolyData.cpp  MeshToVTKPolyData.h  OrientImage.h  Orientation.cpp  Orientation.h  PropagatedDeformableModel.cpp  PropagatedDeformableModel.h  README.txt  SCRegion.h  SCTemplate.h  SpinalCord.cpp  SpinalCord.h  SymmetricalCropping.cpp  SymmetricalCropping.h  VertebralIdentification.h  Vertex.cpp  Vertex.h  foncteurPlan.h  itkHoughTransform2DCirclesImageFilter.h  itkHoughTransform2DCirclesImageFilter.hxx  referential.cpp  referential.h
dev/isct_propseg/documentation/html/: _8___global_adaptation_8h_source.html  _8___propagated_deformable_model_8h_source.html  _deformable_model_adaptator_8h_source.html  _docu___parameters_8h.html  _docu___parameters_8h_source.html  _global_adaptation_8h_source.html  _inverse_matrix_8h_source.html  _mesh_8h.html  _orient_image_8h_source.html  _propagated_deformable_model_8h_source.html  _vertebral_identification_8h_source.html  _vertex_8h_source.html  class_deformable_model_adaptator-members.html  class_disk_adaptator-members.html  class_disk_adaptator.html  class_foncteur_deformable_basic_local_adaptation-members.html  class_foncteur_deformable_basic_local_adaptation.html  class_foncteur_deformable_local_adaptation.html  class_foncteur_global_adaptation.html  class_global_adaptation-members.html  class_matrix_inversion-members.html  class_referential-members.html  class_s_c_region-members.html  class_symmetrical_cropping.html  class_vertex-members.html  classes.html  correction_tips.html  itk_hough_transform2_d_circles_image_filter_8hxx_source.html  pages.html  struct_foncteur_plan-members.html
dev/isct_propseg/documentation/html/search/: all_69.js  all_72.js  classes_0.js  classes_1.js  classes_3.js  classes_63.js  classes_68.js  classes_72.js  files_0.js  files_69.js  files_70.js  pages_0.js
dev/isct_propseg/util/: Matrix3x3.cpp  Matrix3x3.h  Matrix4x4.h  MatrixNxM.cpp  MatrixNxM.h  Vector3.h
dev/sct_modif_header/: CMakeLists.txt  Matrix4x4.cpp  Matrix4x4.h  Vector3.cpp  Vector4.cpp  main.cpp  sct_modif_header.1
dev_mtv/: sct_smooth_b1.py
doc/: figures.key.REMOVED.git-id
documentation/: LICENSE  README.rst  Slicereg2D.key  make.bat
flirtsch/: README.md  schedule_TxTy.sch  schedule_TxTyRz.sch  schedule_TxTy_2mm.sch
hpc/: README.md  cedar_template.sh  gcp_template.sh  guillimin_template.sh  mammouth_template.sh  pbs_template.sh  slurm_template.sh
html_templates/: contrast_tool.html  index.html
install/: Miniconda-latest-MacOSX-x86_64.sh.REMOVED.git-id  check_bash_profile.sh  compile_ants.py  compile_external.py  compress_binaries.sh  compress_data.sh  copy_ants_binaries.py  create_bin.sh  create_links.sh  create_links_fsl.py  create_links_fsl.sh  create_package.py  create_script_links.sh  create_script_links_dev.sh  fix_fsl_linux.sh  generate-requirements-freeze.sh  guillimin_template.sh  install_ants_osx.sh  install_dependencies_with_workarounds.py  install_external.py  install_patch.py  install_sct  install_w_conda.sh  installer.py  installer.sh  installer.sh~  installer_ants_debian.sh  installer_dev.sh  make_binaries.sh  required_installed_commands.py  sct_changelog.py  sct_env  sct_launcher  source_bashrc.sh  tf_distro_check.py  travis_tools.sh  update_bin.sh
issues/: batch_20150216.sh  batch_20150225.sh
lib/: libITKBiasCorrection-4.4.1.dylib  libITKBioCell-4.4.1.dylib  libITKCommon-4.4.1.dylib  libITKDICOMParser-4.4.1.dylib  libITKEXPAT-4.4.1.dylib  libITKFEM-4.4.1.dylib  libITKIOBMP-4.4.1.dylib  libITKIOBioRad-4.4.1.dylib  libITKIOCSV-4.4.1.dylib  libITKIOGDCM-4.4.1.dylib  libITKIOGE-4.4.1.dylib  libITKIOGIPL-4.4.1.dylib  libITKIOHDF5-4.4.1.dylib  libITKIOIPL-4.4.1.dylib  libITKIOImageBase-4.4.1.dylib  libITKIOJPEG-4.4.1.dylib  libITKIOLSM-4.4.1.dylib  libITKIOMesh-4.4.1.dylib  libITKIOMesh-4.4.1.dylib.REMOVED.git-id  libITKIOMeta-4.4.1.dylib  libITKIONIFTI-4.4.1.dylib  libITKIONRRD-4.4.1.dylib  (+203 more)
matlab/: call_fsl.m  (+30 more)
(+4800 files in other folders)
