project(sct_modif_header)
cmake_minimum_required(VERSION 2.8)
set(CMAKE_BUILD_TYPE RELEASE CACHE STRING "RELEASE" FORCE)
set(CMAKE_INCLUDE_PATH ${ITK_DIR}/include/ITK-4.5)

set(CMAKE_EXE_LINKER_FLAGS -static)
set(CMAKE_FIND_LIBRARY_SUFFIXES .a)
set(CMAKE_EXE_LINK_DYNAMIC_C_FLAGS)
set(CMAKE_EXE_LINK_DYNAMIC_CXX_FLAGS)
set(CMAKE_SHARED_LIBRARY_C_FLAGS)
set(CMAKE_SHARED_LIBRARY_CXX_FLAGS)
set(CMAKE_SHARED_LIBRARY_LINK_C_FLAGS)
set(CMAKE_SHARED_LIBRARY_LINK_CXX_FLAGS)

FIND_PACKAGE(ITK REQUIRED)
INCLUDE(${ITK_USE_FILE})

aux_source_directory(. SRC_LIST)
add_executable(${PROJECT_NAME} ${SRC_LIST})

TARGET_LINK_LIBRARIES(sct_modif_header
ITKCommon
ITKIOImageBase
ITKIONIFTI
ITKIONRRD
ITKIOMRC
ITKIOMeta
ITKIOPNG
ITKIOJPEG
ITKIOIPL
ITKIOLSM
ITKIOMesh
ITKIOTIFF
ITKIOSiemens
ITKIOSpatialObjects
ITKIOVTK
ITKIOXML
ITKIOStimulate
ITKIOBioRad
ITKIOBMP
ITKIOCSV
ITKIOGDCM
ITKIOGE
ITKIOGIPL
ITKIOHDF5
)

